first change thuuyen

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<!-- <p>Hôm nay là...</p>
+				<p>Hôm nay là...</p>
 				<p>một ngày bình thường</p>
 				<p>nhưng nó ý nghĩa hơn, bởi vì...</p>
 				<p>nhiều năm trước...</p>
@@ -128,7 +128,7 @@
 				<p>Đạt được cột mốc 42kg trong đời mình...</p>
 				<p>Như em hằng mơ ước,hahaha</p>
 				<p>Và cuối cùng,...</p>
-				<p>Cảm ơn em đã đến bên anh...</p> -->
+				<p>Cảm ơn em đã đến bên anh...</p>
 				<p>Thank you so much...</p>
 			</div>
 		</div>
@@ -139,31 +139,31 @@
 			<!-- Full-width images with number and caption text -->
 			<div class="mySlides fade">
 			<div class="numbertext">1 / 5</div>
-			<img src="img1.jpg" class="image_show" style="max-height: 700px;">
+			<img src="img1.jpg" class="image_show" style="max-width: 100%; max-height: 700px;">
 			<div class="text">Caption Text</div>
 			</div>
 		
 			<div class="mySlides fade">
 			<div class="numbertext">2 / 5</div>
-			<img src="img2.jpg" class="image_show"style="max-height: 700px;">
+			<img src="img2.jpg" class="image_show"style="max-width: 100% ;max-height: 700px;">
 			<div class="text">Caption Two</div>
 			</div>
 		
 			<div class="mySlides fade">
 			<div class="numbertext">3 / 5</div>
-			<img src="img3.jpg" class="image_show" style="max-height: 700px;">
+			<img src="img3.jpg" class="image_show" style="max-width: 100% ; max-height: 700px;">
 			<div class="text">Caption Three</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">4 / 5</div>
-				<img src="img4.jpg" class="image_show" style="max-height: 700px;">
+				<img src="img4.jpg" class="image_show" style="max-width: 100% ; max-height: 700px;">
 				<div class="text">Caption Three</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">5 / 5</div>
-				<img src="img5.jpg" class="image_show" style="max-height: 700px;">
+				<img src="img5.jpg" class="image_show" style="max-width: 100% ; max-height: 700px;">
 				<div class="text">Caption Three</div>
 			</div>
 		
