--- a/slidephoto/index.html
+++ b/slidephoto/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="image">
-                <img src="./photo/kiniem14.jpg">
+                <img src="./photo/kiniem14.JPG">
                 <div class="text">
                     Vô cùng cảm ơn món quà siu tuyệt vời của cô bé :3
                 </div>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="image">
-                <img src="./photo/kiniem13.jpg">
+                <img src="./photo/kiniem13.JPG">
                 <div class="text">
                     Rất tự hào về cô bé nhỏ này lunn.
                 </div>
@@ -199,7 +199,7 @@
                 </div>
             </div>
             <div class="image">
-                <img src="./photo/kiniem24.jpg">
+                <img src="./photo/kiniem24.JPG">
                 <div class="text">
                     Chuyến về quê hơi bất ổn của hai đứa, nhưng anh lại thấy vô cùng đáng nhớ.
                 </div>
